New plugins for collectd5 on FreeBSD, zfs_arc_v2 and geom_stat
zfs_arc_v2 is a fork of zfs_arc, and changed just about ever stat and
graph.  This should be closer to being correct than the previous plugin.
Every metric in kstat.zfs.misc.arcstats.* is collected.  New ratios where
created. These metrics are unlikely uncompariable to the previous plugin.

geom_stat plugin is all the stats surfaced by the userland/CLI program
"gstat" in FreeBSD.  The code from this tool has been moved into this
collectd module.  Some units have been changed (to make more sense in RRD
graphs), otherwise, should produced the same values as gstat.

geom_stat installs a default fliter of "^[a]?da[0123456789]+$", which is
equivant to :
      gstat -f '^[a]?da[0123456789]+$'

You can change this with in the collectd.conf file with the plugin
block for this plugin.  The default is effectively :

<Plugin "geom_stat">
    Filter "^[a]?da[0123456789]+$"
</Plugin>

(cherry picked from commit 45ba479ea6329f4948d3213941c8a73a73df5aad)

--- a/net-mgmt/collectd5/Makefile
+++ b/net-mgmt/collectd5/Makefile
@@ -106,6 +106,7 @@ CONFIGURE_ARGS+=	\
 		--enable-email \
 		--enable-exec \
 		--enable-filecount \
+		--enable-geom-stat \
 		--enable-load \
 		--enable-logfile \
 		--enable-match_empty_counter \
@@ -140,7 +141,9 @@ CONFIGURE_ARGS+=	\
 		--enable-uptime \
 		--enable-uuid \
 		--enable-write_graphite \
-		--enable-zfs_arc
+		--enable-zfs_arc \
+		--enable-zfs_arc_v2
+
 
 .if ${PORT_OPTIONS:MCGI}
 RUN_DEPENDS+=	p5-URI>=0:${PORTSDIR}/net/p5-URI \
