--- a/sysutils/py-iocage/Makefile
+++ b/sysutils/py-iocage/Makefile
@@ -2,8 +2,8 @@
 # $FreeBSD$
 
 PORTNAME=	iocage
-PORTVERSION=	0.9.8b
-PORTREVISION=	12
+PORTVERSION=	0.9.8
+PORTREVISION=	1
 CATEGORIES=	sysutils python
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
 
@@ -25,7 +25,7 @@ RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}click>=6.7:devel/py-click \
 		${PYTHON_PKGNAMEPREFIX}pygit2>=0.24.1:devel/py-pygit2
 
 USE_GITHUB=	yes
-GH_TAGNAME=	007a06b56b96525cd8c01dec214d8328fa8c3344
+GH_TAGNAME=	74b7a3914acfc4cb55fd0374f615d2331f004b7b
 
 NO_ARCH=	yes
 USES=		python:3.6
