sysutils/openseachest: create port
Cross platform utilities useful for performing various operations on SATA, SAS,
NVMe, and USB storage devices.

WWW: https://github.com/Seagate/openSeaChest

--- a/sysutils/Makefile
+++ b/sysutils/Makefile
@@ -760,6 +760,8 @@
     SUBDIR += omnibackup
     SUBDIR += open
     SUBDIR += openipmi
+    SUBDIR += opensbi
+    SUBDIR += openseachest
     SUBDIR += openupsd
     SUBDIR += openzfs
     SUBDIR += openzfs-kmod
