--- a/net-mgmt/collectd5/files/patch-configure.ac
+++ b/net-mgmt/collectd5/files/patch-configure.ac
@@ -1,15 +1,33 @@
---- configure.ac.orig	2017-06-06 18:13:54 UTC
+--- configure.ac.orig	2020-09-03 11:09:35 UTC
 +++ configure.ac
-@@ -145,7 +145,7 @@ if test "x$ac_system" = "xAIX"; then
- fi
- 
- # Where to install .pc files.
--pkgconfigdir="${libdir}/pkgconfig"
-+pkgconfigdir="${prefix}/libdata/pkgconfig"
- AC_SUBST([pkgconfigdir])
- 
+@@ -24,7 +24,7 @@ AC_SYS_LARGEFILE
  #
-@@ -928,7 +928,7 @@ AC_CHECK_FUNCS([thread_info], [have_thread_info="yes"], [have_thread_info="no"])
+ # Checks for programs.
+ #
+-AC_PROG_CC_C99([],
++AC_PROG_CC([],
+   [AC_MSG_ERROR([No compiler found that supports C99])]
+ )
+ 
+@@ -725,7 +725,7 @@ AC_C_CONST
+ AC_TYPE_PID_T
+ AC_TYPE_SIZE_T
+ AC_TYPE_UID_T
+-AC_HEADER_TIME
++AC_CHECK_HEADERS([sys/time.h])
+ 
+ test_cxx_flags() {
+   AC_LANG_PUSH([C++])
+@@ -757,7 +757,7 @@ AC_FUNC_STRERROR_R
+ 
+ if test "x$GCC" = "xyes"; then
+   SAVE_CFLAGS="$CFLAGS"
+-  CFLAGS="$CFLAGS -Wall -Werror"
++  CFLAGS="$CFLAGS -Wall "
+ fi
+ SAVE_LDFLAGS="$LDFLAGS"
+ LDFLAGS=""
+@@ -929,7 +929,7 @@ AC_CHECK_FUNCS([thread_info], [have_thread_info="yes"]
  # Check for strptime {{{
  if test "x$GCC" = "xyes"; then
    SAVE_CFLAGS="$CFLAGS"
@@ -18,162 +36,80 @@
  fi
  
  AC_CHECK_FUNCS([strptime], [have_strptime="yes"], [have_strptime="no"])
-@@ -3419,6 +3419,8 @@ AC_ARG_WITH([libmongoc],
-   [
-     if test "x$withval" = "xyes"; then
-       with_libmongoc="yes"
-+      LIBMONGOC_CFLAGS="$LIBMONGOC_CFLAGS -I$withval/include/libmongoc-1.0 -I$withval/include/libbson-1.0"
-+      LIBMONGOC_LDFLAGS="$LIBMONGOC_LDFLAGS -L$withval/lib -lsasl2 -lssl -lcrypto  -lmongoc-1.0 -lbson-1.0"
-     else if test "x$withval" = "xno"; then
-       with_libmongoc="no"
-     else
-@@ -4329,7 +4331,7 @@ if test "x$with_libperl" = "xyes"; then
+@@ -1000,10 +1000,10 @@ fi
+ 
+ # Check for timegm {{{
+ 
+-# These checks need -Werror because implicit function declarations are only a
++# These checks need  because implicit function declarations are only a
+ # warning ...
+ SAVE_CFLAGS="$CFLAGS"
+-CFLAGS="$CFLAGS -Werror"
++CFLAGS="$CFLAGS "
+ 
+ AC_CACHE_CHECK([for timegm],
+   [c_cv_have_timegm],
+@@ -3454,7 +3454,7 @@ if test "x$with_libmongoc" = "xyes"; then
+   SAVE_LDFLAGS="$LDFLAGS"
+ 
+   CPPFLAGS="$CPPFLAGS $LIBMONGOC_CFLAGS"
+-  LDFLAGS="$LDFLAGS $LIBMONGOC_LDFLAGS"
++  LDFLAGS="$LDFLAGS $LIBMONGOC_LIBS"
+ 
+   AC_CHECK_LIB([mongoc-1.0], [mongoc_init],
+     [with_libmongoc="yes"],
+@@ -3874,7 +3874,7 @@ if test "x$with_libnetsnmp" = "xyes"; then
+   SAVE_LIBS="$LIBS"
+   CPPFLAGS="$CPPFLAGS $with_libnetsnmp_cppflags"
+   if test "x$GCC" = "xyes"; then
+-    CPPFLAGS="$CPPFLAGS -Wall -Werror"
++    CPPFLAGS="$CPPFLAGS -Wall "
+   fi
+   LDFLAGS="$LDFLAGS $with_libnetsnmp_ldflags"
+   LIBS="$LIBS -lnetsnmp"
+@@ -4348,7 +4348,7 @@ if test "x$with_libperl" = "xyes"; then
    SAVE_LIBS="$LIBS"
    CFLAGS="$CFLAGS $PERL_CFLAGS"
    if test "x$GCC" = "xyes"; then
 -    CFLAGS="$CFLAGS -Wall -Werror"
-+    CFLAGS="$CFLAGS -Wall"
++    CFLAGS="$CFLAGS -Wall "
    fi
    LIBS="$LIBS $PERL_LIBS"
  
-@@ -5785,6 +5787,7 @@ if test "x$with_libupsclient" = "xyes"; then
+@@ -5810,6 +5810,7 @@ if test "x$with_libupsclient" = "xyes"; then
+     [],
+     [],
      [[
++      #include <time.h>
        #include <stdlib.h>
        #include <stdio.h>
-+      #include <time.h>
        #include <upsclient.h>
-     ]]
-   )
-@@ -5979,6 +5981,66 @@ AM_CONDITIONAL([BUILD_WITH_LIBYAJL], [test "x$with_libyajl" = "xyes"])
- AM_CONDITIONAL([BUILD_WITH_LIBYAJL2], [test "x$with_libyajl$with_libyajl2" = "xyesyes"])
- # }}}
+@@ -6507,7 +6508,7 @@ AC_ARG_WITH([libslurm],
+     else if test -d "$with_libslurm/lib"; then
+       AC_MSG_NOTICE([Not checking for libslurm: Manually configured])
+       with_libslurm_cflags="-I$withval/include"
+-      with_libslurm_libs="-L$withval/lib -llibslurm"
++      with_libslurm_libs="-L$withval/lib -lslurm"
+       with_libslurm="yes"
+     fi; fi; fi
+   ],
+@@ -6579,7 +6580,7 @@ collectd features:])
+ AC_COLLECTD([debug],     [enable],  [feature], [debugging])
+ AC_COLLECTD([daemon],    [disable], [feature], [daemon mode])
+ AC_COLLECTD([getifaddrs],[enable],  [feature], [getifaddrs under Linux])
+-AC_COLLECTD([werror],    [disable], [feature], [building with -Werror])
++AC_COLLECTD([werror],    [disable], [feature], [building with ])
  
-+# --with-libdtrace {{{
-+with_libdtrace_cppflags=""
-+with_libdtrace_ldflags=""
-+AC_ARG_WITH(libdtrace, [AS_HELP_STRING([--with-libdtrace@<:@=PREFIX@:>@], [Path to libdtrace. ])],
-+[
-+  if test "x$withval" = "xyes"
-+  then
-+    with_libdtrace_cppflags="\
-+-I /usr/src/cddl/compat/opensolaris/include \
-+-I /usr/src/cddl/contrib/opensolaris/lib/libdtrace/common \
-+-I /usr/src/sys/cddl/compat/opensolaris \
-+-I /usr/src/sys/cddl/contrib/opensolaris/uts/common \
-+"
-+    with_libdtrace_ldflags="-ldtrace"
-+    with_libdtrace="yes"
-+  else
-+    with_libdtrace="no"
-+  fi
-+],
-+[
-+  with_libdtrace="no"
-+])
-+if test "x$with_libdtrace" = "xyes"
-+then
-+  SAVE_CPPFLAGS="$CPPFLAGS"
-+  SAVE_LDFLAGS="$LDFLAGS"
-+
-+  CPPFLAGS="$CPPFLAGS $with_libdtrace_cppflags"
-+  LDFLAGS="$LDFLAGS $with_libdtrace_ldflags"
-+
-+  AC_CHECK_LIB(dtrace, dtrace_open,
-+  [
-+    AC_DEFINE(HAVE_LIBDTRACE, 1, [Define to 1 if you have the dtrace library (-ldtrace).])
-+  ], [with_libdtrace="no (libdtrace not found)"])
-+
-+  CPPFLAGS="$SAVE_CPPFLAGS"
-+  LDFLAGS="$SAVE_LDFLAGS"
-+fi
-+if test "x$with_libdtrace" = "xyes"
-+then
-+  SAVE_CPPFLAGS="$CPPFLAGS"
-+  CPPFLAGS="$CPPFLAGS $with_libdtrace_cppflags"
-+
-+  AC_CHECK_HEADERS(dtrace.h,
-+  [
-+    AC_DEFINE(HAVE_LIBDTRACE_H, 1, [Define to 1 if you have the <libdtrace.h> header file.])
-+  ], [with_libdtrace="no (dtrace.h not found)"])
-+
-+  CPPFLAGS="$SAVE_CPPFLAGS"
-+fi
-+if test "x$with_libdtrace" = "xyes"
-+then
-+  BUILD_WITH_LIBDTRACE_CPPFLAGS="$with_libdtrace_cppflags"
-+  BUILD_WITH_LIBDTRACE_LDFLAGS="$with_libdtrace_ldflags"
-+  AC_SUBST(BUILD_WITH_LIBDTRACE_CPPFLAGS)
-+  AC_SUBST(BUILD_WITH_LIBDTRACE_LDFLAGS)
-+fi
-+AM_CONDITIONAL(BUILD_WITH_LIBDTRACE, test "x$with_libdtrace" = "xyes")
-+# }}}
-+
- # --with-mic {{{
- with_mic_cppflags="-I/opt/intel/mic/sysmgmt/sdk/include"
- with_mic_ldflags="-L/opt/intel/mic/sysmgmt/sdk/lib/Linux"
-@@ -6727,9 +6789,13 @@ fi
- 
- if test "x$ac_system" = "xFreeBSD"; then
-   plugin_cpufreq="yes"
-+  plugin_ctl="yes"
-   plugin_disk="yes"
-+  plugin_geom_stat="yes"
-+  plugin_nfsstat="yes"
-   plugin_ipstats="yes"
-   plugin_zfs_arc="yes"
-+  plugin_zfs_arc_v2="yes"
- fi
- 
- 
-@@ -6754,6 +6820,7 @@ if test "x$with_kstat" = "xyes"; then
-   plugin_processes="yes"
-   plugin_uptime="yes"
-   plugin_zfs_arc="yes"
-+  plugin_zfs_arc_v2="yes"
-   plugin_zone="yes"
- fi
- 
-@@ -7016,7 +7083,9 @@ AC_PLUGIN([contextswitch],       [$plugin_contextswitch],     [context switch st
- AC_PLUGIN([cpu],                 [$plugin_cpu],               [CPU usage statistics])
- AC_PLUGIN([cpufreq],             [$plugin_cpufreq],           [CPU frequency statistics])
- AC_PLUGIN([cpusleep],            [$plugin_cpusleep],          [CPU sleep statistics])
-+AC_PLUGIN([cputemp],             [yes],                       [CPU temperature statistics])
- AC_PLUGIN([csv],                 [yes],                       [CSV output plugin])
-+AC_PLUGIN([ctl],                 [$plugin_ctl],               [CAM target layer statistics])
- AC_PLUGIN([curl],                [$with_libcurl],             [CURL generic web statistics])
- AC_PLUGIN([curl_json],           [$plugin_curl_json],         [CouchDB statistics])
- AC_PLUGIN([curl_xml],            [$plugin_curl_xml],          [CURL generic xml statistics])
-@@ -7036,6 +7105,7 @@ AC_PLUGIN([exec],                [yes],                       [Execution of exte
- AC_PLUGIN([fhcount],             [$plugin_fhcount],           [File handles statistics])
- AC_PLUGIN([filecount],           [yes],                       [Count files in directories])
- AC_PLUGIN([fscache],             [$plugin_fscache],           [fscache statistics])
-+AC_PLUGIN([geom_stat],           [$plugin_geom_stat],         [FreeBSD GEOM statistics])
- AC_PLUGIN([gmond],               [$with_libganglia],          [Ganglia plugin])
- AC_PLUGIN([gps],                 [$plugin_gps],               [GPS plugin])
- AC_PLUGIN([gpu_nvidia],          [$with_cuda],                [NVIDIA GPU plugin])
-@@ -7079,6 +7149,7 @@ AC_PLUGIN([netapp],              [$with_libnetapp],           [NetApp plugin])
- AC_PLUGIN([netlink],             [$with_libmnl],              [Enhanced Linux network statistics])
- AC_PLUGIN([network],             [yes],                       [Network communication plugin])
- AC_PLUGIN([nfs],                 [$plugin_nfs],               [NFS statistics])
-+AC_PLUGIN([nfsstat],             [$plugin_nfsstat],    [FreeBSD NFS statistics])
- AC_PLUGIN([nginx],               [$with_libcurl],             [nginx statistics])
- AC_PLUGIN([notify_desktop],      [$with_libnotify],           [Desktop notifications])
- AC_PLUGIN([notify_email],        [$with_libesmtp],            [Email notifier])
-@@ -7164,6 +7235,7 @@ AC_PLUGIN([write_tsdb],          [yes],                       [TSDB output plugi
- AC_PLUGIN([xencpu],              [$plugin_xencpu],            [Xen Host CPU usage])
- AC_PLUGIN([xmms],                [$with_libxmms],             [XMMS statistics])
- AC_PLUGIN([zfs_arc],             [$plugin_zfs_arc],           [ZFS ARC statistics])
-+AC_PLUGIN([zfs_arc_v2],          [$plugin_zfs_arc_v2],        [ZFS ARC statistics, improved v2])
- AC_PLUGIN([zone],                [$plugin_zone],              [Solaris container statistics])
- AC_PLUGIN([zookeeper],           [yes],                       [Zookeeper statistics])
- 
-@@ -7307,8 +7379,8 @@ if test "x$GCC" = "xyes"; then
+ dependency_warning="no"
+ dependency_error="no"
+@@ -7348,8 +7349,8 @@ if test "x$GCC" = "xyes"; then
    AM_CFLAGS="-Wall"
    AM_CXXFLAGS="-Wall"
    if test "x$enable_werror" != "xno"; then
 -    AM_CFLAGS="$AM_CFLAGS -Werror"
 -    AM_CXXFLAGS="$AM_CXXFLAGS -Werror"
-+    AM_CFLAGS="$AM_CFLAGS"
-+    AM_CXXFLAGS="$AM_CXXFLAGS"
++    AM_CFLAGS="$AM_CFLAGS "
++    AM_CXXFLAGS="$AM_CXXFLAGS "
    fi
  fi
+ 
