--- a/net/netatalk3/files/netatalk.in
+++ b/net/netatalk3/files/netatalk.in
@@ -1,7 +1,7 @@
 #!/bin/sh
 
 # PROVIDE: netatalk
-# REQUIRE: DAEMON %%ZEROCONF%% dbus
+# REQUIRE: DAEMON %%ZEROCONF%%
 # KEYWORD: shutdown
 #
 # AFP fileserver for Mac clients.  Add the following to /etc/rc.conf to
