--- a/textproc/source-highlight/Makefile
+++ b/textproc/source-highlight/Makefile
@@ -17,6 +17,7 @@ BUILD_DEPENDS=	exctags:devel/ctags
 LIB_DEPENDS=	libboost_regex.so:devel/boost-libs
 
 USES=		compiler:c++11-lang gmake pathfix libtool localbase
+USE_CXXSTD=	gnu++11
 GNU_CONFIGURE=	yes
 CONFIGURE_ARGS=	--with-bash-completion
 INSTALL_TARGET=	install-strip
