Fix custom versions of ports
* databases/rrdtool

* net-mgmt/collectd5

* net/netatalk3

--- a/databases/rrdtool/Makefile
+++ b/databases/rrdtool/Makefile
@@ -1,20 +1,26 @@
-# Created by: Dmitry Sivachenko <dima@Chg.RU>
-
 PORTNAME=	rrdtool
 DISTVERSION=	1.8.0
-PORTREVISION=	3
+PORTREVISION=	4
 CATEGORIES=	databases graphics
-MASTER_SITES=	http://oss.oetiker.ch/rrdtool/pub/
+MASTER_SITES=	https://github.com/oetiker/rrdtool-1.x/releases/download/v${DISTVERSION}/
 
-MAINTAINER=	ports@FreeBSD.org
+MAINTAINER=	eduardo@FreeBSD.org
 COMMENT=	Round Robin Database Tools
+WWW=		https://oss.oetiker.ch/rrdtool/
 
 LICENSE=	GPLv2
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
-CONFLICTS=	rrdtool12
-
+USES=		cpe gmake gnome libtool pathfix pkgconfig shebangfix
+CPE_VENDOR=	rrdtool_project
+USE_GNOME=	glib20 libxml2
+USE_LDCONFIG=	yes
+USE_RC_SUBR=	rrdcached
+SHEBANG_FILES=	examples/rrdcached/rrdcached-size.pl examples/stripes.py
+GNU_CONFIGURE=	yes
+GNU_CONFIGURE_MANPREFIX=	${PREFIX}/share
 CONFIGURE_ARGS=	--disable-tcl
+CONFIGURE_ENV=	RRDDOCDIR=${DOCSDIR:Q}
 CPPFLAGS+=	-I${LOCALBASE}/include -I${LOCALBASE}/include/freetype2
 # Some symbols in the linker version script librrd.sym are undefined when the
 # CACHE option is off. Suppress errors with lld >= 17 due to these undefined
@@ -22,7 +28,6 @@ CPPFLAGS+=	-I${LOCALBASE}/include -I${LOCALBASE}/include/freetype2
 LDFLAGS+=	-Wl,--undefined-version
 CONFLICTS=	rrdtool12
 PORTDOCS=	*
-PORTEXAMPLES=	cgi-demo.cgi
 
 OPTIONS_DEFINE=		DEJAVU DOCS EXAMPLES GRAPH LOCKTIMEOUT MMAP NLS PERL \
 			PYTHON RUBY
@@ -69,15 +74,8 @@ RUBY_USES=			ruby
 RUBY_CONFIGURE_ENABLE=		ruby
 
 post-extract:
-	@${REINPLACE_CMD} -E 's|(^rrdcached_LDADD = librrd_th.la)|\1 $$\(ALL_LIBS\)|' \
-		${WRKSRC}/src/Makefile.in
-
 	@${REINPLACE_CMD} -E 's|(^rrdtool_LDADD = librrd.la)|\1 $$\(ALL_LIBS\)|' \
 		${WRKSRC}/src/Makefile.in
-
-post-extract-EXAMPLES-off:
-	@${REINPLACE_CMD} -e '/^SUBDIRS = /s| examples | |' \
-		${WRKSRC}/Makefile.in
 
 post-install-EXAMPLES-on:
 .if !defined(BATCH)
