--- a/net/netatalk3/Makefile
+++ b/net/netatalk3/Makefile
@@ -5,7 +5,7 @@ PORTVERSION=	3.1.13
 PORTREVISION=	7
 PORTEPOCH=	1
 CATEGORIES=	net
-MASTER_SITES=	SF/${PORTNAME}/${PORTNAME}-${PORTVERSION:S/./-/g}
+MASTER_SITES=	SF
 PKGNAMESUFFIX=	3
 
 MAINTAINER=	marcus@FreeBSD.org
