Fix net/netatalk3 port
This maintains iX netatalk3 port from 13.1-stable branch and
fixes a minor issue caused by change in base pam in FreeBSD
13.3.

--- a/net/netatalk3/Makefile
+++ b/net/netatalk3/Makefile
@@ -5,7 +5,7 @@ PORTVERSION=	3.1.13
 PORTREVISION=	7
 PORTEPOCH=	1
 CATEGORIES=	net
-MASTER_SITES=	SF/${PORTNAME}/${PORTNAME}-${PORTVERSION:S/./-/g}
+MASTER_SITES=	SF
 PKGNAMESUFFIX=	3
 
 MAINTAINER=	marcus@FreeBSD.org
@@ -16,7 +16,7 @@ LICENSE=	GPLv2
 LIB_DEPENDS=	libgcrypt.so:security/libgcrypt \
 		libevent.so:devel/libevent
 
-USES=		bdb:18 cpe gettext gmake iconv libtool perl5 pkgconfig shebangfix ssl tar:bzip2
+USES=		bdb:5+ cpe gettext gmake iconv libtool perl5 pkgconfig shebangfix ssl tar:bzip2
 GNU_CONFIGURE=	yes
 USE_LDCONFIG=	yes
 USE_RC_SUBR=	netatalk
