Fix build for net-mgmt/collectd5
This fixes the build for our customized collectd version.

--- a/net-mgmt/collectd5/Makefile
+++ b/net-mgmt/collectd5/Makefile
@@ -14,7 +14,10 @@ COMMENT=	Systems & network statistics collection daemon
 LICENSE=	GPLv2
 LICENSE_FILE=	${WRKSRC}/COPYING
 
-USES=		autoreconf cpe gmake libtool pkgconfig shebangfix tar:bzip2
+LIB_DEPENDS=   libpfctl.so:net/libpfctl
+LDFLAGS+=      -lpfctl
+
+USES=		autoreconf cpe gmake libtool localbase:ldflags pkgconfig shebangfix tar:bzip2
 
 GNU_CONFIGURE=	yes
 
