Fix runtime dependency for py-netif

--- a/net/py-netif/Makefile
+++ b/net/py-netif/Makefile
@@ -9,7 +9,7 @@ WWW=		https://github.com/freenas/py-netif
 
 LICENSE=	BSD2CLAUSE
 
-RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}bsd>0:devel/py-bsd@${PY_FLAVOR}
+RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}bsd>0:freenas/py-bsd@${PY_FLAVOR}
 
 USES=		python
 USE_GITHUB=	yes
